--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,4 +1,4 @@
 <nav>
-  <a href="blog/">Home</a>
-  <a href="blog/about.html">About</a>
+  <a href="/">Home</a>
+  <a href="/about.html">About</a>
 </nav>
